updated pokedex-container styling max width so that horizontal scroll-bar is no longer default on mobile view

--- a/frontend/src/features/TrackingPage/TrackingPage.module.css
+++ b/frontend/src/features/TrackingPage/TrackingPage.module.css
@@ -112,7 +112,7 @@
     }
 
     .pokedex-container, .encounters-container{
-        width:100%;
+        width:98%;
     }
 
     .pokemon-container{
